test/conformance/kuttl/mutate/clusterpolicy/cornercases/trigger-name-exceeds-63-characters/01-secret.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- secret.yaml
assert:
- secret-assert.yaml
