test/conformance/kuttl/mutate/clusterpolicy/cornercases/trigger-name-exceeds-63-characters/02-configmap.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- configmap.yaml
assert:
- configmap-assert.yaml
