test/conformance/kuttl/mutate/clusterpolicy/cornercases/trigger-name-exceeds-63-characters/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: trigger-deployment-restarts
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
